Fixed Errors and added func
