# docs/swagger.yaml
@@ -52,6 +52,14 @@ definitions:
       uuid:
         type: string
     type: object
+  models.UserRole:
+    enum:
+    - 0
+    - 1
+    type: integer
+    x-enum-varnames:
+    - Normal
+    - Admin
   web.Msg:
     properties:
       data: {}
@@ -62,6 +70,8 @@ definitions:
     type: object
   web.MsgList:
     properties:
+      ID:
+        type: integer
       latest_msg:
         type: string
       latest_msg_time:
@@ -92,7 +102,7 @@ definitions:
       name:
         type: string
       role:
-        type: string
+        $ref: '#/definitions/models.UserRole'
     type: object
 host: localhost:8080
 info:
@@ -102,7 +112,7 @@ info:
   title: webFinal API
   version: "1.0"
 paths:
-  /api/v1/msg/v1/delete/{tid}:
+  /api/v1/msg/v1/delete/{mid}:
     get:
       description: |-
         message api
@@ -256,34 +266,7 @@ paths:
             - $ref: '#/definitions/web.User'
             - properties:
                 data:
-                  type: string
-              type: object
-        "400":
-          description: Bad Request
-          schema:
-            allOf:
-            - $ref: '#/definitions/web.User'
-            - properties:
-                data:
-                  type: integer
-              type: object
-        "401":
-          description: Unauthorized
-          schema:
-            allOf:
-            - $ref: '#/definitions/web.User'
-            - properties:
-                data:
-                  type: integer
-              type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            allOf:
-            - $ref: '#/definitions/web.User'
-            - properties:
-                data:
-                  type: integer
+                  $ref: '#/definitions/web.User'
               type: object
       summary: Login
       tags:
@@ -314,36 +297,29 @@ paths:
             - $ref: '#/definitions/web.User'
             - properties:
                 data:
-                  type: string
-              type: object
-        "400":
-          description: Bad Request
-          schema:
-            allOf:
-            - $ref: '#/definitions/web.User'
-            - properties:
-                data:
-                  type: integer
-              type: object
-        "401":
-          description: Unauthorized
-          schema:
-            allOf:
-            - $ref: '#/definitions/web.User'
-            - properties:
-                data:
-                  type: integer
-              type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            allOf:
-            - $ref: '#/definitions/web.User'
-            - properties:
-                data:
-                  type: integer
+                  $ref: '#/definitions/web.User'
               type: object
       summary: Register
+      tags:
+      - user
+  /api/v1/user/whoami:
+    get:
+      description: |-
+        check id api
+        user can check id of themselves
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/web.User'
+            - properties:
+                data:
+                  $ref: '#/definitions/web.User'
+              type: object
+      summary: check id
       tags:
       - user
   /pic/create:
@@ -421,6 +397,25 @@ paths:
                   type: array
               type: object
       summary: Get user pic
+      tags:
+      - pic
+  /pic/list/all:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/web.Pic'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/models.Pic'
+                  type: array
+              type: object
+      summary: List all user pic (admin only)
       tags:
       - pic
   /user/delete/{id}:
