# routers/pic.go
@@ -17,4 +17,5 @@ func SetupPicRouter(r fiber.Router) {
 	pic.Post("/upload", services.UploadPic)
 	pic.Get("/delete/:uuid", services.DeleteUserPic)
 	pic.Get("/download/:uuid", services.DownloadPic)
+	pic.Get("/list/all", services.ListAllUserPic)
 }
